[package]
name = "issiz"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = """
An utility for unemployed people
"""
authors = ["Yiğit Cemal Öztürk <ozturkyigitcemal@gmail.com>"]
repository = "https://github.com/CadmiumC4/issiz"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
